--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 main-title">
-          <h1>Website</h1>
-          <h2>under construction</h2>
+          <h2>Website</h2>
+          <h3>under construction</h3>
         </div>
       </div>
       <div class="row align-items-center">
@@ -249,7 +249,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>your-website-name.com</span>
+          <span>www.goldenveintrading.com</span>
         </div>
       </footer>
 
