--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="row justify-content-center">
         <div class="col-md-10 main-title">
           <h2>Website</h2>
-          <h3>under construction</h3>
+          <h3>under construction.</h3>
         </div>
       </div>
       <div class="row align-items-center">
