update page title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Golden vein trading</title>
   </head>
   <body>
     <div class="container">
